fixed post overlap

--- a/src/pages/forum/forum.css
+++ b/src/pages/forum/forum.css
@@ -19,7 +19,7 @@
 }
 
 .form-search {
-    width: 35vw;
+    width: 32vw;
     height: 40px;
     margin-left: 30px;
     float: left;
